--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,13 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_home">Main</string>
+    <string name="menu_gallery">Nueva Pregunta</string>
+    <string name="menu_slideshow">Evaluacion</string>
+    <string name="menu_tools">Resultados</string>
+    <string name="menu_share">Acerca De</string>
+    <string name="menu_send">Respuestas</string>
+    <string name="d" />
 </resources>
